--------------------------------------------------------------------------------
 OSM2World 0.1.6                                                     2011-05-?? 
--------------------------------------------------------------------------------
 
 * always use JOSM workaround for .osm files with generator='JOSM'
 
 
--------------------------------------------------------------------------------
 OSM2World 0.1.5                                                     2011-04-30 
--------------------------------------------------------------------------------
 
 * configurable materials
 * configuration file no longer limited to command line interface
 * zoom with +/- keys
 * support for building:min_level
 * prevent silent InvalidGeometryException crashes during conversions
 
 
--------------------------------------------------------------------------------
 OSM2World 0.1.4                                                     2011-04-20 
--------------------------------------------------------------------------------
 
 * support for dragging files into the viewer
 * addition of some missing library files
 * Mac OS X support in start script
 * alternative ElevationCalculators available for library users 
 
 
--------------------------------------------------------------------------------
 OSM2World 0.1.3                                                     2011-03-24 
--------------------------------------------------------------------------------
 
 * extended public interface of the ConversionFacade
 * workaround that allows reading JOSM XML files
 * new StreetFurnitureModule
 
 
--------------------------------------------------------------------------------
 OSM2World 0.1.2                                                     2011-03-18 
--------------------------------------------------------------------------------
 
 * fixed multipolygon support
 * help/version text in empty viewer
 * new build script
 
 