@@ -62,7 +62,9 @@ public final class Materials {
 		new ConfMaterial(Lighting.FLAT, new Color(1f, 0.9f, 0.55f));
 	public static final ConfMaterial ROOF_DEFAULT =
 		new ConfMaterial(Lighting.FLAT, new Color(0.8f, 0, 0));
-		
+	public static final ConfMaterial ENTRANCE_DEFAULT =
+		new ConfMaterial(Lighting.FLAT, new Color(0.2f, 0, 0));
+	
 	public static final ConfMaterial WALL_DEFAULT =
 		new ConfMaterial(Lighting.FLAT, Color.GRAY);
 	
