@@ -2,6 +2,7 @@
  OSM2World 0.1.6                                                     2011-05-?? 
 --------------------------------------------------------------------------------
  
+ * new WorldObject: building entrance
  * always use JOSM workaround for .osm files with generator='JOSM'
  
  
